--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 .main-box {
-  background-image: url("bg.svg");
+  background-image: url("../images/bg.svg");
   height: 1061px;
   display: flex;
   justify-content: center;
@@ -25,6 +25,7 @@ body {
       font-weight: 100;
     }
     .text-box{
+      margin-bottom: 22px;
       display: block;
       width: 100%;
       height: 34px;
@@ -48,8 +49,8 @@ body {
       text-align: center;
       border: 1px solid transparent;
       border-radius: 4px;
-      margin: 10px 0 0 40px;
-      cursor: pointer;
+      margin-left: 46px;
+      text-decoration: none;
 
     }
   }
@@ -85,9 +86,38 @@ body {
     border: 1px solid transparent;
     border-radius: 4px;
     margin: 10px 10px 0 10px;
-    cursor: pointer;
+    text-decoration: none;
+
   }
   .search-nav{
     margin-top: 20px;
+
   }
+}
+.city-name{
+  font-size: 65px;
+  text-align: center;
+  font-weight: 100;
+}
+.forecast-container{
+  display: flex;
+  max-width: 1321px;
+  flex-wrap: wrap;
+  margin: 50px auto;
+
+  .day-container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 35px;
+    .weather-icon{
+      height: 130px;
+    }
+    .date{
+      font-size: 30px;
+      color: #333;
+      font-weight: 100;
+    }
+  }
+
 }
