--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@ body {
   width: 100%; }
 
 .main-box {
-  background-image: url("../images/bg.svg");
+  background-image: url("./bg.svg");
   height: 1061px;
   display: flex;
   justify-content: center; }
@@ -86,7 +86,7 @@ body {
 
 .forecast-container {
   display: flex;
-  max-width: 1321px;
+  max-width: 1300px;
   flex-wrap: wrap;
   margin: 50px auto; }
   .forecast-container .day-container {
@@ -100,5 +100,8 @@ body {
       font-size: 30px;
       color: #333;
       font-weight: 100; }
+
+.weather-link {
+  text-decoration: none; }
 
 /*# sourceMappingURL=index.css.map */
