--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 .main-box {
-  background-image: url("../images/bg.svg");
+  background-image: url('./bg.svg');
   height: 1061px;
   display: flex;
   justify-content: center;
@@ -101,7 +101,7 @@ body {
 }
 .forecast-container{
   display: flex;
-  max-width: 1321px;
+  max-width: 1300px;
   flex-wrap: wrap;
   margin: 50px auto;
 
@@ -119,5 +119,7 @@ body {
       font-weight: 100;
     }
   }
-
+}
+.weather-link{
+  text-decoration: none
 }
