--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -91,7 +91,12 @@ body {
   }
   .search-nav{
     margin-top: 20px;
-
+    .search-container{
+      @media screen and (min-width: 280px) and (max-width: 530px){
+        display: flex;
+        flex-direction: column;
+      }
+    }
   }
 }
 .city-name{
@@ -112,6 +117,27 @@ body {
     margin: 35px;
     .weather-icon{
       height: 130px;
+      cursor: pointer;
+    }
+    .date{
+      font-size: 30px;
+      color: #333;
+      font-weight: 100;
+      cursor: pointer;
+    }
+  }
+}
+.weather-link{
+  text-decoration: none
+}
+.details-container{
+  .day-container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 35px;
+    .weather-icon{
+      height: 130px;
     }
     .date{
       font-size: 30px;
@@ -119,7 +145,21 @@ body {
       font-weight: 100;
     }
   }
-}
-.weather-link{
-  text-decoration: none
+  .description-details{
+    font-size: 34px;
+    font-weight:100;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    .city-name-details{
+      font-size: 40px;
+      font-weight: 400;
+    }
+    .min-temp{
+      color: rgba(101, 195, 224, 0.97)
+    }
+    .max-temp{
+      color: rgba(236, 118, 80, 0.97)
+    }
+  }
 }
