--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,6 +62,10 @@ body {
   padding: 5px;
   display: flex;
   justify-content: space-between;
+  .logo{
+    text-decoration: none;
+    color: white;
+  }
 
   .text-box{
     height: 34px;
@@ -161,5 +165,13 @@ body {
     .max-temp{
       color: rgba(236, 118, 80, 0.97)
     }
+  }
+}
+.not-found-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .not-found-img{
+    width: 20%;
   }
 }
