--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,13 +2,16 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
   margin: 0; }
 
+#root {
+  height: 100vh; }
+
 .container {
   height: 100%;
   width: 100%; }
 
 .main-box {
   background-image: url("./bg.svg");
-  height: 1061px;
+  height: 100%;
   display: flex;
   justify-content: center; }
   .main-box .central {
@@ -16,7 +19,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column; }
-    .main-box .central h1 {
+    .main-box .central h2 {
       font-size: 45px;
       color: white;
       font-weight: 100; }
@@ -97,7 +100,8 @@ body {
   display: flex;
   max-width: 1300px;
   flex-wrap: wrap;
-  margin: 50px auto; }
+  margin: 50px auto;
+  justify-content: center; }
   .forecast-container .day-container {
     display: flex;
     align-items: center;
